[package]
name = "play-with-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres  = "0.7.11"
mini-redis = "0.4"
bytes = "1"
axum = "0.7.5"
tracing-subscriber = "0.3"
thiserror = "1.0.64"

[[bin]]
name = "http"
path = "src/bin/http/http-server.rs"  # otherwise Rust analyzer gets stupid